--- a/src/pages/guidelines/color/code.mdx
+++ b/src/pages/guidelines/color/code.mdx
@@ -15,7 +15,7 @@ consistent application of color.
 
 <InlineNotification>
 
-If you’re using carbon-components there’s no reason to install the color package
+If you’re using `@carbon/react` there’s no reason to install the color package
 separately. See our [get started](/get-started/develop/react) guide to start
 building.
 
@@ -47,98 +47,55 @@ yarn add @carbon/colors
 
 ## Usage
 
-You can use the `@carbon/colors` module in your JavaScript, in addition to your
-Sass.
-
 ### Sass
 
-In Sass, you can import the files individual by doing:
+The `@carbon/colors` package enables you to access colors from the IBM Design
+Language in Sass. You can access a color directly from the package by writing
+the following:
 
 ```scss
-@import '@carbon/colors/scss/colors';
+@use '@carbon/colors';
+
+.selector {
+  background: colors.$blue-50;
+}
 ```
 
-This file automatically includes the `colors` mixin which initializes all the
-color variables for the IBM Design Language.
+For a full list of colors exported, refer to the
+[API](https://github.com/carbon-design-system/carbon/blob/main/packages/colors/docs/sass.md#api)
+section in the package's Sass Documentation.
 
-These color variables follow the naming convention: `$<swatch>-<grade>`. For
-example:
+In addition to individual colors, you can access all colors in a `Map` using the
+`$colors` variable.
 
 ```scss
-$blue-50;
-$cool-gray-10;
-$black-100;
-$white-0;
+@use '@carbon/colors';
+@each $swatch, $grades in colors.$colors {
+  @each $grade in $grades {
+    //
+  }
+}
 ```
 
-You can also use the shorthand form of these colors by dropping the ``
-namespace:
-
-```scss
-$blue-50;
-$cool-gray-10;
-$black-100;
-$white-0;
-```
-
-_Note: the shorthand variables require that you do not have any other
-conflicting variables in your setup. Namespaced variables are always preferred
-for this reason, unless you are confident that no collisions will occur._
-
-If you would like you choose when these variables are defined, then you can call
-the `colors` mixin directly by importing the following file:
-
-```scss
-@import '@carbon/colors/scss/mixins';
-
-// ...
-@include colors();
-```
-
-Alongside the color variables detailed above, we also provide a map of colors so
-that you can programmatically use these values. This map is called `$colors` and
-each key is the name of a swatch. The value of these swatches is also a map, but
-each key is now the grade. In code, this looks like the following:
-
-<!-- prettier-ignore-start -->
+Each key in the `$colors` map is the name of a group of colors, also known as a
+swatch. The value of each entry is a `Map` where the keys are the color grade
+and the values are the hex codes for the color at that grade. For example:
 
 ```scss
 $colors: (
-  'blue': (
-    10: #edf4ff,
-    // ...
-  )
+  blue: (
+    10: #edf5ff,
+    20: #d0e2ff,
+    30: #a6c8ff,
+    40: #78a9ff,
+    50: #4589ff,
+    60: #0f62fe,
+    70: #0043ce,
+    80: #002d9c,
+    90: #001d6c,
+    100: #001141,
+  ),
 );
-```
-
-<!-- prettier-ignore-end -->
-
-You can include this variable by including `@carbon/colors/scss/colors` or
-calling the `colors()` mixin directly.
-
-#### Migrating from previous versions
-
-If you were originally using a project that had color variables defined as
-`$ibm-color__<swatch>-<grade>`, or are relying on `$ibm-color-map`, you can also
-use the entrypoint described above to access these colors. They are meant as an
-easier way to help adopt these packages. However, these variables will be
-removed in the next release of Carbon.
-
-Similar to previous efforts, we also provide colors in the formats mentioned
-above. For example:
-
-```scss
-$ibm-color__blue-50;
-$ibm-color__warm-gray-100;
-```
-
-If you would like a mixin to conditionally include these variables, you can
-include the mixin by using:
-
-```scss
-@import '@carbon/colors/scss/mixins';
-
-@include ibm--colors();
 ```
 
 ### JavaScript
