--- a/src/pages/guidelines/motion/code.mdx
+++ b/src/pages/guidelines/motion/code.mdx
@@ -16,9 +16,9 @@ across digital experiences.
 
 <InlineNotification>
 
-If you’re using carbon-components there’s no reason to install the motion
-package separately. See our [get started](/get-started/develop/react) guide to
-start building.
+If you’re using `@carbon/react` there’s no reason to install the motion package
+separately. See our [get started](/get-started/develop/react) guide to start
+building.
 
 </InlineNotification>
 
@@ -48,34 +48,32 @@ yarn add @carbon/motion
 
 ## Usage
 
-`@carbon/motion` supports standard, entrance, and exit easing curves in two
-motion modes: productive and expressive. You can access these curves using
-either Sass or JavaScript.
-
-### Sass
-
-`@carbon/motion` exports a `motion` function and `motion` mixin that you can use
-to access the value of a motion curve or include that curve as the
-`transition-timing-function` for a selector. To use these helpers, you can do
-the following in your project:
+The `@carbon/motion` package enables you to access motion curves and durations
+built for the IBM Design Language in Sass. You can access these values directly
+from the package by writing the following:
 
 ```scss
-@import '@carbon/motion/scss/motion.scss';
+@use '@carbon/motion';
+.selector {
+  // Set `transition-timing-function` directly
+  @include motion.motion(standard, productive);
 
-.my-custom-selector {
-  // Supplies the standard easing curve, using the productive mode by default
-  transition-timing-function: motion(standard);
-}
+  // Alternatively
+  transition: opacity motion.motion(standard, productive);
 
-.my-custom-selector-v2 {
-  // Supplies the standard easing curve, but with the expressive mode, on the
-  // transition-timing-function property for this selector
-  @include motion(standard, expressive);
+  // Or use a duration
+  transition: opacity motion.$duration-fast-01;
 }
 ```
 
-Both the `motion` function and mixin support passing in the name of the motion
-curve and the mode you want to work in.
+#### API
+
+<br />
+| Name | Type | | :---------------------- | :------- | | `$duration-fast-01`
+| Duration | | `$duration-fast-02` | Duration | | `$duration-moderate-01` | Duration
+| | `$duration-moderate-02` | Duration | | `$duration-slow-01` | Duration | | `$duration-slow-02`
+| Duration | | `$easings` | Map | | `@mixin motion` | Mixin | | `@function motion`
+| Mixin |
 
 ### JavaScript
 
@@ -95,6 +93,21 @@ import { easings, motion } from '@carbon/motion';
 
 motion('standard', 'productive'); // Returns a string `cubic-bezier()` function
 ```
+
+### Configuration
+
+You can configure parts of the `@carbon/motion` package with Sass Modules. For
+example, you can change the `$prefix` used by writing the following:
+
+```scss
+@use '@carbon/motion' with ($prefix: 'custom-prefix');
+```
+
+For a full list of options that you can configure, check out the table below.
+
+| Option    | Description                                                       | Default |
+| :-------- | :---------------------------------------------------------------- | :------ |
+| `$prefix` | The prefix that is used in selectors, CSS Custom Properties, etc. | `'cds'` |
 
 ## Resources
 
