--- a/src/pages/guidelines/spacing/code.mdx
+++ b/src/pages/guidelines/spacing/code.mdx
@@ -20,9 +20,9 @@ spacing and alignment.
 
 <InlineNotification>
 
-If you’re using carbon-components there’s no reason to install the layout
-package separately. See our [get started](/get-started/develop/react) guide to
-start building.
+If you’re using `@carbon/react` there’s no reason to install the layout package
+separately. See our [get started](/get-started/develop/react) guide to start
+building.
 
 </InlineNotification>
 
@@ -52,25 +52,41 @@ yarn add @carbon/layout
 
 ## Usage
 
-`@carbon/layout` provides a couple of useful utilities alongside the
-specification for the grid system for the IBM Design Language. This package
-includes:
+The `@carbon/layout` package provides spacing tokens and conversion utilities
+for the Carbon Design System. You can access these tokens and helpers by writing
+the following:
 
-| Feature         | Description                                                                                                                             |
-| --------------- | --------------------------------------------------------------------------------------------------------------------------------------- |
-| Breakpoints     | Variables and settings for the IBM Design Grid, including gutter and breakpoints. It also includes helpers for working with breakpoints |
-| Unit conversion | Helpers for converting from `px` to `rem` or `em`.                                                                                      |
-| Key heights     | Helpers for working with key heights at different breakpoints                                                                           |
-| Mini unit       | Helpers for working in multiples of the mini-unit                                                                                       |
-| Spacing         | Provides a spacing scale and helper for using steps in the scale                                                                        |
+```scss
+@use '@carbon/layout';
 
-One important thing to remember is that `@carbon/layout` is not responsible for
-the grid itself. If you are looking for a grid implementation to use, definitely
-checkout the [`@carbon/grid`](../grid) package.
+.selector {
+  margin-bottom: layout.$spacing-05;
+  width: layout.rem(24px);
+  height: layout.rem(24px);
+}
+```
 
-`@carbon/layout` provides the above features in both Sass and JavaScript. If
-you're looking for support in a different language, feel free to file an issue
-proposing the new addition!
+#### API
+
+<br />
+| Export | Description | !default | | :------------------ | :---------- | :-------
+| | `$spacing-01` | | ✅ | | `$spacing-02` | | ✅ | | `$spacing-03` | | ✅ | | `$spacing-04`
+| | ✅ | | `$spacing-05` | | ✅ | | `$spacing-06` | | ✅ | | `$spacing-07` | | ✅
+| | `$spacing-08` | | ✅ | | `$spacing-09` | | ✅ | | `$spacing-10` | | ✅ | | `$spacing-11`
+| | ✅ | | `$spacing-12` | | ✅ | | `$spacing-13` | | ✅ | | `$spacing ` | | | |
+`$fluid-spacing-01` | | ✅ | | `$fluid-spacing-02` | | ✅ | | `$fluid-spacing-03`
+| | ✅ | | `$fluid-spacing-04` | | ✅ | | `$fluid-spacing ` | | | | `@function em`
+| | | | `@function rem` | | | | `$base-font-size` | | ✅ |
+
+### Configuration
+
+You can configure parts of the `@carbon/layout` package that are `!default` with
+Sass Modules. For example, you can change the `$base-font-size` by writing the
+following:
+
+```scss
+@use '@carbon/layout' with ($base-font-size: 18px);
+```
 
 ## Resources
 
