--- a/src/pages/designing/kits/adobe-xd.mdx
+++ b/src/pages/designing/kits/adobe-xd.mdx
@@ -23,40 +23,126 @@ contact the
 
 <AnchorLinks>
 
-<AnchorLink>Get the kit</AnchorLink>
-<AnchorLink>Support</AnchorLink>
+<AnchorLink>Get the libraries</AnchorLink>
+<AnchorLink>Start designing</AnchorLink>
+<AnchorLink>Feedback</AnchorLink>
 
 </AnchorLinks>
 
-## Get the kit
+## Get the libraries
 
-The Adobe XD is a work in progress and once finished it will be available as an
-Adobe Creative Cloud (CC) Library. Until then download the file and use it as a
-sticker sheet.
-
-#### 1. Install Adobe XD
+#### Install Adobe XD
 
 To design with Carbon you must have the most recent version of
 [Adobe XD](https://www.adobe.com/products/xd.html) installed.
 
-#### 2. Download the kit
+#### Get the Adobe XD Creative Cloud libraries
 
-The Adobe XD kit is currently only available in the White theme.
+1. Open the Creative Cloud Library App.
+2. Navigate to the **Files** tab in the header (A). Select the **Your
+   libraries** page in the left hand navigation (B).
 
 <Row>
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Get the Adobe XD Design kit"
-    href="https://github.com/IBM/design-kit/raw/master/Adobe%20XD/Carbon%20Design%20System%20-%20V10%20-%20White%20(11.01.19).xd"
-    actionIcon="download">
+<Column colLg={8}>
 
-![](images/adobe-xd.png)
+![adobe xd instructions part 1](images/kit-adobexd-1.png)
 
-  </ResourceCard>
 </Column>
 </Row>
 
-## Support
+3. Select the **Browse all** button to browse all libraries (C).
+
+<Row>
+<Column colLg={8}>
+
+![adobe xd instructions part 2](images/kit-adobexd-2.png)
+
+</Column>
+</Row>
+
+4. In the search bar, search for "Carbon Design System" (D).
+
+<Row>
+<Column colLg={8}>
+
+![adobe xd instructions part 3](images/kit-adobexd-3.png)
+
+</Column>
+</Row>
+
+5. You will see the four Carbon theme libraries that are available to **Add**
+   (E) by hovering over the library previews. Once you add a library, the
+   library will be marked with a checkmark (F).
+
+<Row>
+<Column colLg={8}>
+
+![adobe xd instructions part 4](images/kit-adobexd-4.png)
+
+</Column>
+</Row>
+
+## Start designing 
+
+### Components
+
+Included in the library are all 32 of the Carbon components and their variants.
+To insert a component, select the **Document assets** icon in the left side rail
+(G).
+
+<Row>
+<Column colLg={8}>
+
+![adobe xd instructions part 5](images/kit-adobexd-5.png)
+
+</Column>
+</Row>
+
+Find the component you would like to use under the **Components** section (H) in
+the document assets panel. Drag the component from the panel onto the canvas.
+
+<Row>
+<Column colLg={8}>
+
+![adobe xd instructions part 6](images/kit-adobexd-6.png)
+
+</Column>
+</Row>
+
+View the name of the component in the right sidebar. If the component has
+variants, you’ll see the variants under the **Component (instance)** section to
+configure the properties and values of that component set.
+
+For more help on how to use Adobe XD components, see the
+[Adobe XD docs](https://helpx.adobe.com/xd/user-guide.html).
+
+### Grids
+
+Grid templates are included in each Carbon themed library. These grid templates
+are on a canvas that can be configured at the five 2x grid breakpoints and also
+includes the 16 column grid.
+
+### Colors
+
+The Carbon color tokens are added as colors in the component assets panel in
+Adobe XD. To apply a color, select an object then in the **Colors** section of
+the component asset menu you can select a color from the Carbon theme library.
+In addition to applying colors to objects, you can also apply colors to text
+layers.
+
+To learn more about applying colors in Adobe XD, see the
+[Adobe XD docs](https://helpx.adobe.com/xd/help/work-with-assets-and-libraries-xd.html).
+
+### Character styles
+
+To apply a character style, select a text layer. Then in the component assets
+panel, select the character style from the Carbon theme library. Use color to
+change the color of a character style.
+
+To learn more about applying character styles in Adobe XD, see the
+[Adobe XD docs](https://helpx.adobe.com/xd/help/work-with-assets-and-libraries-xd.html).
+
+### Support
 
 If you’re brand new to Adobe XD, they offer some great
 [tutorials](https://helpx.adobe.com/xd/tutorials.html).
@@ -68,7 +154,7 @@ the library is available, you will need to download the new file to replace the
 old one. Releases will be posted to the
 [GitHub repo](https://github.com/IBM/design-kit).
 
-### Help
+## Feedback
 
-Can’t find an answer to your question? Open an issue on
-[GitHub](https://github.com/IBM/design-kit/issues/new?assignees=&labels=kit%3A+adobe+xd&template=-adobe-xd--carbon-kit.md&title=%5Bcomponent%5D+description+of+issue).
+Help us improve this component by providing feedback, asking questions, and
+leaving any other comments on GitHub.
