--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -159,6 +159,7 @@ are always at least two tabs and one is selected by default. Icons are optional.
 
 </Column>
 </Row>
+<Caption>Note: The close icon button pattern is not a configurable prop, it is instead enabled through the composable component API. This requires additional styling and configuration.</Caption>
 
 <Row>
 <Column colSm={2} colMd={4} colLg={4}>
@@ -190,6 +191,7 @@ B. Indicator <br /> C. Icon
 
 </Column>
 </Row>
+<Caption>Note: The optional secondary label and icon patterns are not configurable props, but are instead enabled through the composable component API. This requires additional styling and configuration.</Caption>
 
 <Row>
 <Column colSm={2} colMd={4} colLg={4}>
@@ -269,6 +271,11 @@ Use the
 to drive visual rhythm by spacing content in multiples of two columns and
 aligning the beginning and ending of the tab elements with content below the
 tabs when possible.
+
+<InlineNotification>
+  _Note: This is not currently implemented in the components, updates for
+  alignment to the grid are incoming!_
+</InlineNotification>
 
 <Row>
 <Column colLg={12}>
@@ -404,6 +411,12 @@ label.
 </Column>
 </Row>
 
+<Caption>
+  Note: Tabs with an icon is an example of a pattern. It is not currently
+  implemented by default in the component, it is instead enabled through the
+  composable component API. This requires additional styling and configuration.
+</Caption>
+
 ### Icon-only tabs
 
 You may use icon-only tabs with both line and contained tabs. Icons must be
@@ -431,6 +444,7 @@ secondary labels with line tabs or auto-width contained tabs.
 
 </Column>
 </Row>
+<Caption>Note: The secondary label is an example of a pattern. It is not currently implemented in the component.</Caption>
 
 ## Related
 
