--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -14,6 +14,16 @@ extra ability to communicate and give clarity to a user.
 
 </PageDescription>
 
+<InlineNotification>
+
+**v11 update:** The tooltip component has been refactored to use the
+[popover](/components/popover/usage/) component under the hood to improve
+accessibility. Definition and interactive tootips now use the
+[toggletip](/components/toggletip/usage/) component to achieve accessibility
+standards.
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
