--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -15,6 +15,15 @@ actionable notifications.
 
 </PageDescription>
 
+<InlineNotification>
+
+**v11 update:** An actionable variant has been added to the notification
+component. Actionable notifications allow for interactive elements within a
+notification, like buttons. Toast and inline notification no longer allow any
+interactive elements.
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
@@ -76,8 +85,7 @@ although some product teams also support banners and notification centers.
         'https://react.carbondesignsystem.com/?path=/story/components-notifications--toast',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-notification--toast',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtoastnotification--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoastnotification--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--toast',
@@ -102,8 +110,7 @@ although some product teams also support banners and notification centers.
         'https://react.carbondesignsystem.com/?path=/story/components-notifications--inline',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-notification--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvinlinenotification--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvinlinenotification--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--inline',
