--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -39,7 +39,7 @@ Carbon uses type tokens to manage typography, and these tokens sit within two
 type sets. The productive and expressive type sets support designers creating
 for a full range of user needs and activities across product and web pages. To
 understand when to use styles from each set, see
-[Type usage](/guidelines/typography/type-usage).
+[Styling strategies](/guidelines/typography/styling-strategies).
 
 #### Base type sizes
 
@@ -105,7 +105,7 @@ styles change size at different breakpoints.
 Do not use these styles inside a container. They may be used in product pages
 where text sits outside of a container, and a blend of expressive and productive
 type styles is desired for hierarchy and distinction. For more information, see
-[Type usage](/guidelines/typography/type-usage).
+[Styling strategies](/guidelines/typography/styling-strategies).
 
 <TypesetStyle typesets="fluidHeadings" breakpointControls={true} />
 
@@ -114,7 +114,7 @@ type styles is desired for hierarchy and distinction. For more information, see
 The callout and display styles are part of the expressive set and being fluid,
 they will adjust at different breakpoints. Do not use these styles inside a
 container. For guidance about using display styles, see
-[Type usage](/guidelines/typography/type-usage#expressive-use-cases/).
+[Styling strategies](/guidelines/typography/styling-strategies#expressive-use-cases).
 
 <TypesetStyle typesets="fluidCallouts,fluidDisplay" breakpointControls={true} />
 
