--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -20,7 +20,8 @@ actionable notifications.
 **v11 update:** An actionable variant has been added to the notification
 component. Actionable notifications allow for interactive elements within a
 notification, like buttons. Toast and inline notification no longer allow any
-interactive elements.
+interactive elements. For more information see the
+[migration guide](/migrating/guide/develop#notifications-breaking).
 
 </InlineNotification>
 
