--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -20,8 +20,7 @@ actionable notifications.
 **v11 update:** An actionable variant has been added to the notification
 component. Actionable notifications allow for interactive elements within a
 notification, like buttons. Toast and inline notification no longer allow any
-interactive elements. For more information see the
-[migration guide](/migrating/guide/develop#notifications-breaking).
+interactive elements.
 
 </InlineNotification>
 
