--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -20,8 +20,7 @@ between groups of information that appear within the same context.
 **v11 update:** The tab component variant names are changing. Default tabs has
 become _Line tabs_ and Container tabs has become _Contained tabs_. Tabs has also
 been refactor to have composable component API which allows for additional
-modifications like icons in tabs and secondary labels. For more information see
-the [migration guide](/guide/develop#tabs-breaking).
+modifications like icons in tabs and secondary labels.
 
 </InlineNotification>
 
